several pdf fixes - clipping link anchors to bounds of container.  pdf box titles don't change based on zoom anymore.   can't zoom a pdf if not selected.  fixed scrolling of previews without scrolling targets.

--- a/src/client/views/nodes/PDFBox.scss
+++ b/src/client/views/nodes/PDFBox.scss
@@ -204,6 +204,7 @@
 .pdfBox {
     width: 100%;
     height: 100%;
+    pointer-events: none;
     .pdfViewerDash-text {
         .textLayer {
             span {
@@ -211,6 +212,12 @@
             }
         }
     }
+}
+
+.pdfBox-background {
+    width: 100%;
+    height: 100%;
+    background: lightGray;
 }
 
 .pdfBox-interactive {
